--- a/eggplant-brownie/Views/Base.lproj/Main.storyboard
+++ b/eggplant-brownie/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="K8V-Vc-RBt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Vo2-fO-IZ4">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,22 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Navigation Controller-->
+        <scene sceneID="M8r-7e-X5F">
+            <objects>
+                <navigationController id="Vo2-fO-IZ4" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="77h-zm-uxy">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="K8V-Vc-RBt" kind="relationship" relationship="rootViewController" id="UmS-3h-Wyt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="l3w-Me-Vxv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1524" y="133"/>
+        </scene>
         <!--Refeicoes Table View Controller-->
         <scene sceneID="kbh-PL-mLS">
             <objects>
@@ -33,6 +49,13 @@
                             <outlet property="delegate" destination="K8V-Vc-RBt" id="tSc-tr-8aM"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="LtF-cu-AqF">
+                        <barButtonItem key="rightBarButtonItem" title="Add" id="igI-fU-WYI">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="Rjs-gY-GzI"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="V7W-FK-YEa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
