--- a/eggplant-brownie/Views/Base.lproj/Main.storyboard
+++ b/eggplant-brownie/Views/Base.lproj/Main.storyboard
@@ -116,6 +116,9 @@
                                 <rect key="frame" x="0.0" y="280" width="375" height="312"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="h5E-py-dMQ"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
