--- a/eggplant-brownie/Views/Base.lproj/Main.storyboard
+++ b/eggplant-brownie/Views/Base.lproj/Main.storyboard
@@ -118,6 +118,7 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="h5E-py-dMQ"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="5Vd-To-nlY"/>
                                 </connections>
                             </tableView>
                         </subviews>
